--- a/app/src/main/res/layout/home_layout.xml
+++ b/app/src/main/res/layout/home_layout.xml
@@ -4,6 +4,14 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:orientation="vertical">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:paddingLeft="10dp"
+        android:text="Health Band Technical Status"
+        android:textSize="25sp" />
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -116,7 +124,7 @@ android:orientation="vertical">
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="10dp"
-                    android:text="Status"
+                    android:text="85%"
                     android:textSize="17sp" />
             </LinearLayout>
         </LinearLayout>
@@ -146,7 +154,7 @@ android:orientation="vertical">
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingLeft="10dp"
-                    android:text="Connected"
+                    android:text="SMS"
                     android:textSize="17sp" />
             </LinearLayout>
         </LinearLayout>
